src/components/Carousel/Location/Location.module.css
.slide {
    width: 256px;
    
    margin-right: 16px;
    border-radius: 8px;
    background-color: white;
    flex-shrink: 0;
    overflow: hidden;
    position: relative;
    transform: translateZ(0);
    -webkit-transition: left 0.5s ease-in-out, transform 0.1s ease-in-out;
    -moz-transition: left 0.5s ease-in-out, transform 0.1s ease-in-out;
    -o-transition: left 0.5s ease-in-out, transform 0.1s ease-in-out;
    transition: left 0.5s ease-in-out, transform 0.1s ease-in-out;


}

.slide:active {
    transform: scale(.95);
}

.slidepic{
    width: 100%;
    height: 160px;

    position: relative;
}

.image{
    object-fit: cover !important;
}

.locationInfoContainer{
    padding: 8px;
    width: 100%;
}

.spotName {
    font-weight: var(--text-weight-bold);
    text-overflow: ellipsis;
    overflow: hidden;
}

.location {
    font-size: 14px;
}

.ratingContainer {
    display: flex;
}

.numReviews {
    padding-top: 2px;
    margin-left: 4px;
}

.starempty{
    color: Grey;
    
}

.starfull{
    color: gold;
}

